// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen campaigns config import-export] should create the campaigns: the campaigns have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ script => Environment/campaignScript
+ campaign => Environment/cfgObjectTest
Completed. 2 object(s) imported.
",
}
`;

exports[`[mutagen campaigns config import-export] should update the modified campaigns: the modified campaigns have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ campaign => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen campaigns config import-export] should update the same campaigns: the campaigns have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ campaign => Environment/cfgObjectTest
~ script => Environment/campaignScript
Completed. 2 object(s) imported.
",
}
`;
